[package]
name = "avatar_graph"
version = "0.6.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
exclude = ["images/*"]
description = "A library for Avatar Graphs"
keywords = ["avatar", "graph", "mathematics", "semantics", "advancedresearch"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/advancedresearch/avatar_graph.git"
homepage = "https://github.com/advancedresearch/avatar_graph"

[dependencies]

[dev-dependencies]
piston = "0.51.0"
pistoncore-sdl2_window = "0.65.0"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
